--- a/app/src/main/res/layout/activity_new_exercise_form.xml
+++ b/app/src/main/res/layout/activity_new_exercise_form.xml
@@ -72,7 +72,7 @@
     <Spinner
         android:id="@+id/spinner_rep_count"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
