--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -12,55 +12,59 @@
     android:paddingRight="8dp">
 
     <ImageView
-        android:id="@+id/image_new_workout"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:id="@+id/image_new_exercise"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:scaleType="centerInside"
         android:visibility="gone"
         app:srcCompat="@drawable/baseline_add_box_24" />
 
     <LinearLayout
-        android:id="@+id/layout_workout_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/layout_workout_edit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/text_workout_name"
-                android:layout_width="wrap_content"
+                android:id="@+id/text_exercise_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nome do treino"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:text="Nome do exercicio"
+                android:textStyle="bold"
+                android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/text_workout_description"
-                android:layout_width="wrap_content"
+                android:id="@+id/text_exercise_description"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Descrição"
-                android:textSize="14sp" />
+                android:text="Descricao do exercicio"
+                android:textSize="16sp" />
 
+            <TextView
+                android:id="@+id/text_exercise_reps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="10 - 20 repeticoes"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/image_delete_workout"
+            android:id="@+id/image_delete_exercise"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
             app:srcCompat="@drawable/round_delete_24" />
+
     </LinearLayout>
 
-
     <View
-        android:id="@+id/divider"
+        android:id="@+id/divider5"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="4dp"
