--- a/app/src/main/res/layout/activity_new_exercise_form.xml
+++ b/app/src/main/res/layout/activity_new_exercise_form.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activity.NewExerciseFormActivity">
+    tools:context=".view.activity.ExerciseFormActivity">
 
     <TextView
         android:id="@+id/textView4"
