--- a/app/src/main/res/layout/activity_new_workout.xml
+++ b/app/src/main/res/layout/activity_new_workout.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.activity.NewWorkoutFormActivity">
+    tools:context=".view.activity.WorkoutFormActivity">
 
 
     <TextView
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_description" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/arraylist_exercises"
+        android:id="@+id/recycler_view_exercises"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
