--- a/app/src/main/res/layout/fragment_manage_week.xml
+++ b/app/src/main/res/layout/fragment_manage_week.xml
@@ -6,14 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".view.fragment.ManageWeekFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Manage Week Fragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerWeeks"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
