--- a/app/src/main/res/layout/week_form_item.xml
+++ b/app/src/main/res/layout/week_form_item.xml
@@ -3,12 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingStart="8dp"
-    android:paddingLeft="8dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="8dp"
-    android:paddingRight="8dp">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_new_workout_week"
@@ -18,6 +13,12 @@
         android:scaleType="centerInside"
         android:visibility="gone"
         app:srcCompat="@drawable/baseline_add_box_24" />
+
+    <TextView
+        android:id="@+id/text_workout_week_day"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Dia da semana" />
 
     <LinearLayout
         android:id="@+id/layout_workout_week_item"
