--- a/app/src/main/res/layout/activity_week_form.xml
+++ b/app/src/main/res/layout/activity_week_form.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_week_workout"
+        android:id="@+id/recycler_workout_day"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
