--- a/app/src/main/res/layout/workout_of_day_item.xml
+++ b/app/src/main/res/layout/workout_of_day_item.xml
@@ -7,17 +7,9 @@
     android:layout_height="200dp"
     android:elevation="1dp"
     android:fadingEdgeLength="2dp"
-    android:gravity="bottom"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="2dp">
-
-    <TextView
-        android:id="@+id/text_is_today"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="HOJE !"
-        android:visibility="gone" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
