--- a/app/src/main/res/layout/dialog_form.xml
+++ b/app/src/main/res/layout/dialog_form.xml
@@ -13,7 +13,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/name"
         android:inputType="text" />
 
     <EditText
@@ -25,6 +25,6 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:hint="Description"
+        android:hint="@string/description"
         android:inputType="text" />
 </LinearLayout>
