--- a/app/src/main/res/layout/select_week_item.xml
+++ b/app/src/main/res/layout/select_week_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/text_select_week_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nome da semana"
+        android:text="@string/week_name"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -18,6 +18,6 @@
         android:id="@+id/text_select_week_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Descricao"
+        android:text="@string/description"
         android:textSize="14sp" />
 </LinearLayout>
