--- a/app/src/main/res/layout/activity_exercise_form.xml
+++ b/app/src/main/res/layout/activity_exercise_form.xml
@@ -120,8 +120,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/setsNum"
         android:inputType="number"
+        android:text="@string/setsNumDefault"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
