--- a/app/src/main/res/layout/fragment_manage_week.xml
+++ b/app/src/main/res/layout/fragment_manage_week.xml
@@ -23,6 +23,6 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerWeeks"
-        android:layout_width="0dp"
-        android:layout_height="0dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
