--- a/app/src/main/res/layout/fragment_manage_workout.xml
+++ b/app/src/main/res/layout/fragment_manage_workout.xml
@@ -23,8 +23,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_workouts"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
 
