--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -22,10 +22,10 @@
         android:id="@+id/text_what_is_ans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
         android:layout_margin="4dp"
         android:padding="4dp"
-        android:text="@string/ans_what_is" />
+        android:text="@string/ans_what_is"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/text_get_started"
@@ -41,9 +41,9 @@
         android:id="@+id/text_get_started_ans"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
         android:layout_margin="4dp"
         android:padding="4dp"
-        android:text="@string/ans_getting_started" />
+        android:text="@string/ans_getting_started"
+        android:textSize="16sp" />
 
 </LinearLayout>
