--- a/app/src/main/res/layout/activity_select_week.xml
+++ b/app/src/main/res/layout/activity_select_week.xml
@@ -8,10 +8,15 @@
     android:orientation="vertical"
     tools:context=".view.activity.SelectWeekActivity">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="32dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_select_week"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp" />
+        android:layout_marginBottom="56dp" />
+
 </LinearLayout>
