--- a/app/src/main/res/layout/activity_select_workout.xml
+++ b/app/src/main/res/layout/activity_select_workout.xml
@@ -8,8 +8,13 @@
     android:orientation="vertical"
     tools:context=".view.activity.SelectWorkoutActivity">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="32dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_select_workout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="56dp" />
 </LinearLayout>
