--- a/app/src/main/res/layout/fragment_manage_week.xml
+++ b/app/src/main/res/layout/fragment_manage_week.xml
@@ -7,13 +7,31 @@
     android:orientation="vertical"
     tools:context=".view.fragment.ManageWeekFragment">
 
-    <TextView
-        android:id="@+id/textView11"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="center|start"
-        android:text="@string/weeks"
-        android:textSize="28sp" />
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="8dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="8dp">
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="32dp" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center|start"
+                android:text="@string/weeks"
+                android:textSize="28sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <View
         android:id="@+id/divider13"
@@ -24,5 +42,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerWeeks"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="56dp"
+        tools:itemCount="4"
+        tools:listitem="@layout/week_item" />
 </LinearLayout>
