--- a/app/src/main/res/layout/workout_of_day_item.xml
+++ b/app/src/main/res/layout/workout_of_day_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_workout_day_item"
-    android:layout_width="120dp"
+    android:layout_width="140dp"
     android:layout_height="200dp"
     android:elevation="1dp"
     android:fadingEdgeLength="2dp"
@@ -13,7 +13,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="180dp"
         android:layout_margin="2dp"
         android:elevation="2dp"
         android:padding="2dp">
@@ -29,7 +29,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="2dp"
+                android:layout_margin="4dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 android:gravity="center"
                 android:text="@string/week_day" />
 
@@ -44,7 +46,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="2dp"
+                android:layout_margin="4dp"
+                android:textSize="16sp"
                 android:gravity="center"
                 android:text="@string/workout_name"
                 android:textAlignment="center" />
@@ -60,7 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="2dp"
+                android:textSize="14sp"
+                android:layout_margin="4dp"
                 android:text="@string/description"
                 android:textAlignment="center" />
         </LinearLayout>
